--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="./css/styles.css" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Piazzolla&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ceviche+One&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&display=swap">
+
     <script src="./js/scripts.js"></script>
     <title>Ransom joke note</title>
   </head>
@@ -22,7 +29,7 @@
       <div class="word">
         <span class="theTLetter">t</span>
         <span class="theHLetter">h</span>
-        <span class="theELetter">e</span>
+        <span class="redLetter theELetter">e</span>
       </div>
       <div class="word">
         <span class="frontendFLetter">f</span>
@@ -30,27 +37,27 @@
         <span class="frontendOLetter">o</span>
         <span class="frontendNLetter">n</span>
         <span class="frontendTLetter">t</span>
-        <span class="hyphen">-</span>
-        <span class="frontendELetter">e</span>
+        <span class="hyphen punctuation">-</span>
+        <span class="redLetter frontendELetter">e</span>
         <span class="frontendNTwoLetter">n</span>
         <span class="frontendDLetter">d</span>
       </div>
       <div class="word">
         <span class="developerDLetter">d</span>
-        <span class="developerELetter">e</span>
+        <span class="redLetter developerELetter">e</span>
         <span class="developerVLetter">v</span>
-        <span class="developerETwoLetter">e</span>
+        <span class="redLetter developerETwoLetter">e</span>
         <span class="developerLLetter">l</span>
         <span class="developerOLetter">o</span>
         <span class="developerPLetter">p</span>
-        <span class="developerEThreeLetter">e</span>
+        <span class="redLetter developerEThreeLetter">e</span>
         <span class="developerRLetter">r</span>
       </div>
       <div class="word">
         <span class="takeTLetter">t</span>
         <span class="takeALetter">a</span>
         <span class="takeKLetter">k</span>
-        <span class="takeELetter">e</span>
+        <span class="redLetter takeELetter">e</span>
       </div>
       <div class="word">
         <span class="upULetter">u</span>
@@ -61,28 +68,28 @@
         <span class="gardeningALetter">a</span>
         <span class="gardeningRLetter">r</span>
         <span class="gardeningDLetter">d</span>
-        <span class="gardeningELetter">e</span>
+        <span class="redLetter gardeningELetter">e</span>
         <span class="gardeningNLetter">n</span>
         <span class="gardeningILetter">i</span>
         <span class="gardeningNTwoLetter">n</span>
         <span class="gardeningGTwoLetter">g</span>
       </div>
       <div class="word">
-        <span class="question-mark">?</span>
+        <span class="question-mark punctuation">?</span>
       </div>
       <div class="word">
         <span class="becauseBLetter">b</span>
-        <span class="becauseELetter">e</span>
+        <span class="redLetter becauseELetter">e</span>
         <span class="becauseCLetter">c</span>
         <span class="becauseALetter">a</span>
         <span class="becauseULetter">u</span>
         <span class="becauseSLetter">s</span>
-        <span class="becauseETwoLetter">e</span>
+        <span class="redLetter becauseETwoLetter">e</span>
       </div>
       <div class="word">
         <span class="theyTLetter">t</span>
         <span class="theyHLetter">h</span>
-        <span class="theyELetter">e</span>
+        <span class="redLetter theyELetter">e</span>
         <span class="theyYLetter">y</span>
       </div>
       <div class="word">
@@ -90,7 +97,7 @@
         <span class="wantedALetter">a</span>
         <span class="wantedNLetter">n</span>
         <span class="wantedTLetter">t</span>
-        <span class="wantedELetter">e</span>
+        <span class="redLetter wantedELetter">e</span>
         <span class="wantedDLetter">d</span>
       </div>
       <div class="word">
@@ -104,12 +111,12 @@
         <span class="improveRLetter">r</span>
         <span class="improveOLetter">o</span>
         <span class="improveVLetter">v</span>
-        <span class="improveELetter">e</span>
+        <span class="redLetter improveELetter">e</span>
       </div>
       <div class="word">
         <span class="theirTLetter">t</span>
         <span class="theirHLetter">h</span>
-        <span class="theirELetter">e</span>
+        <span class="redLetter theirELetter">e</span>
         <span class="theirILetter">i</span>
         <span class="theirRLetter">r</span>
       </div>
@@ -128,7 +135,7 @@
         <span class="skillsSTwoLetter">s</span>
       </div>
       <div class="word">
-        <span class="exclamation-mark">!</span>
+        <span class="punctuation exclamation-mark">!</span>
       </div>
     </div>
   </body>
